# crud_online_store

./: .gitignore  requirements.txt
online_store/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
online_store/core/: settings.py  urls.py
online_store/store/: admin.py  forms.py  models.py  urls.py  views.py
online_store/store/migrations/: 0001_initial.py  0002_alter_wear_category_id.py
online_store/store/templates/store/: create.html  edit.html  show.html  success_page.html
online_store/user/: urls.py  views.py
online_store/user/templates/: base.html
online_store/user/templates/home/: contacts.html  home.html
online_store/user/templates/registration/: login.html  registration.html
online_store/user/templates/user/: profile.html
