[tool.poetry]
name = "online-store"
version = "0.1.0"
description = ""
authors = ["Sergey <Kuberunnak@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
crispy-bootstrap5 = "^2023.10"
python-dotenv = "^1.0.0"
django-crispy-forms = "^2.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
